upload images, improve gallery with transitions

--- a/gallery.html
+++ b/gallery.html
@@ -16,22 +16,25 @@
     </div>
     <div class="container">
         <div class="gallery">
-            <div class="image"><img src="./home/logo.jpg" alt="logo" width="1094" height="971"></div>
-            <div class="image"><img src="./home/eac.jpg" alt="eac" width="960" height="960"></div>
-            <div class="image"><img src="./home/etw.png" alt="etw" width="1079" height="536"></div>
-            <div class="image"><img src="./home/logo.jpg" alt="logo" width="1094" height="971"></div>
-            <div class="image"><img src="./home/eac.jpg" alt="eac" width="960" height="960"></div>
-            <div class="image"><img src="./home/etw.png" alt="etw" width="1079" height="536"></div>
-            <div class="image"><img src="./home/logo.jpg" alt="logo" width="1094" height="971"></div>
-            <div class="image"><img src="./home/eac.jpg" alt="eac" width="960" height="960"></div>
-            <div class="image"><img src="./home/etw.png" alt="etw" width="1079" height="536"></div>
-            <div class="image"><img src="./home/logo.jpg" alt="logo" width="1094" height="971"></div>
-            <div class="image"><img src="./home/eac.jpg" alt="eac" width="960" height="960"></div>
-            <div class="image"><img src="./home/etw.png" alt="etw" width="1079" height="536"></div>
-            <div class="image"><img src="./home/logo.jpg" alt="logo" width="1094" height="971"></div>
-            <div class="image"><img src="./home/eac.jpg" alt="eac" width="960" height="960"></div>
-            <div class="image"><img src="./home/etw.png" alt="etw" width="1079" height="536"></div>
-            </div>
+            <div class="image"><img src="./gallery/01.jpg" alt="1" width="780" height="1040"></div>
+            <div class="image"><img src="./gallery/02.jpg" alt="2" width="780" height="1040"></div>
+            <div class="image"><img src="./gallery/03.jpg" alt="3" width="780" height="1040"></div>
+            <div class="image"><img src="./gallery/04.jpg" alt="4" width="780" height="1040"></div>
+            <div class="image"><img src="./gallery/05.jpg" alt="5" width="1600" height="1200"></div>
+            <div class="image"><img src="./gallery/06.jpg" alt="6" width="1600" height="1200"></div>
+            <div class="image"><img src="./gallery/07.jpg" alt="7" width="1200" height="1600"></div>
+            <div class="image"><img src="./gallery/08.jpg" alt="8" width="1600" height="900"></div>
+            <div class="image"><img src="./gallery/10.jpg" alt="10" width="1200" height="1600"></div>
+            <div class="image"><img src="./gallery/11.jpg" alt="11" width="899" height="1599"></div>
+            <div class="image"><img src="./gallery/12.jpg" alt="12" width="1200" height="1600"></div>
+            <div class="image"><img src="./gallery/13.jpg" alt="13" width="1536" height="2048"></div>
+            <div class="image"><img src="./gallery/14.jpg" alt="14" width="1536" height="2048"></div>
+            <div class="image"><img src="./gallery/15.jpg" alt="15" width="1536" height="2048"></div>
+            <div class="image"><img src="./gallery/16.jpg" alt="16" width="1536" height="2048"></div>
+            <div class="image"><img src="./gallery/17.jpg" alt="17" width="1536" height="2048"></div>
+            <div class="image"><img src="./gallery/18.jpg" alt="18" width="768" height="1024"></div>
+            <div class="image"><img src="./gallery/19.jpg" alt="19" width="1080" height="1920"></div>
+            <div class="image"><img src="./gallery/20.jpg" alt="19" width="1632" height="918"></div>
         </div>
         <div class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur itaque deleniti, mollitia similique praesentium, ea quis nam corporis aperiam ut dolores, pariatur unde molestiae consectetur assumenda magnam libero expedita laudantium.</div>
 </body>
